unpackaged/main/default/objects/pse__Skills_Management__c/pse__Skills_Management__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings to determine the behavior of skills and certifications.</description>
    <label>Skills Management</label>
</CustomObject>