unpackaged/main/default/objects/pse__Skills_Management__c/fields/pse__Add_Skills_Filter_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Add_Skills_Filter_Fieldset__c</fullName>
    <description>The API name of a field set used by the Skill Object. This field set defines the add skill filters for the Add Skill/Certification window in the Manage Skills component.</description>
    <inlineHelpText>The API name of a field set used by the Skill Object. This field set defines the add skill filters for the Add Skill/Certification window in the Manage Skills component.</inlineHelpText>
    <label>Add Skills - Filter Field Set</label>
    <length>128</length>
    <type>Text</type>
</CustomField>