unpackaged/main/default/objects/pse__Skills_Management__c/fields/pse__Additional_Add_Skills_Fields__c.field-meta.xml
<CustomField>
    <fullName>pse__Additional_Add_Skills_Fields__c</fullName>
    <defaultValue>'Additional_Add_Skills_Fields'</defaultValue>
    <description>API name of a field set used by the Skill Certification Rating Object. This field set defines the additional fields for the Add Skill/Certification window in the Manage Skills component.</description>
    <inlineHelpText>API name of a field set used by the Skill Certification Rating Object. This field set defines the additional fields for the Add Skill/Certification window in the Manage Skills component.</inlineHelpText>
    <label>Additional Add Skills Fields</label>
    <length>128</length>
    <type>Text</type>
</CustomField>