unpackaged/main/default/objects/pse__Skills_Management__c/fields/pse__Display_Evaluate_Skills_Button__c.field-meta.xml
<CustomField>
    <fullName>pse__Display_Evaluate_Skills_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Evaluate Skills button is visible on the Manage Skills and Certifications component UI.</description>
    <inlineHelpText>When selected, the Evaluate Skills button is visible on the Manage Skills and Certifications component UI.</inlineHelpText>
    <label>Display Evaluate Skills button</label>
    <type>Checkbox</type>
</CustomField>