unpackaged/main/default/objects/pse__Skills_Management__c/fields/pse__Outdated_Skills_Threshold__c.field-meta.xml
<CustomField>
    <fullName>pse__Outdated_Skills_Threshold__c</fullName>
    <defaultValue>42</defaultValue>
    <description>Skill / certification ratings that have not been updated within the number of days specified in the Outdated Skills Threshold in Days Skills Management custom setting are identified as outdated. These outdated ratings are used to trigger the Einstein Next Best Action - Update Skills feature.</description>
    <inlineHelpText>Skill / certification ratings that have not been updated within the number of days specified in the Outdated Skills Threshold in Days Skills Management custom setting are identified as outdated. These outdated ratings are used to trigger the Einstein Next Best Action - Update Skills feature.</inlineHelpText>
    <label>Outdated Skills Threshold in Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>