unpackaged/main/default/objects/pse__Skills_Management__c/fields/pse__Restrict_Skills_and_Skill_Sets_by_Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Restrict_Skills_and_Skill_Sets_by_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, only skills and skill sets associated with the resource's role or without any associated role are displayed.</description>
    <inlineHelpText>If selected, only skills and skill sets associated with the resource's role or without any associated role are displayed.</inlineHelpText>
    <label>Restrict Skills and Skill Sets by Role</label>
    <type>Checkbox</type>
</CustomField>