unpackaged/main/default/objects/pse__Skills_Management__c/fields/pse__Restrict_to_Skills_with_Existing_Rating__c.field-meta.xml
<CustomField>
    <fullName>pse__Restrict_to_Skills_with_Existing_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, only those skills and certifications for which the related resource has a corresponding skill / certification rating record are displayed. This reduces the number of skills and certifications available for selection on an experience record.</description>
    <inlineHelpText>If selected, only those skills and certifications for which the related resource has a corresponding skill / certification rating record are displayed. This reduces the number of skills and certifications available for selection on an experience record.</inlineHelpText>
    <label>Restrict to Skills with Existing Rating</label>
    <type>Checkbox</type>
</CustomField>